<resources>
    <string name="app_name" translatable="false">HomeFood</string>
    <string name="facebook_app_id" translatable="false">920939631249633</string>

    <string name="error_toast">Data about crash has been sent</string>
    <string name="waiting">Waiting…</string>
    <string name="about_the_dish">About The Dish?</string>
    <string name="cold_dish">Cold Dish</string>
    <string name="warm_dish">Warm Dish</string>
    <string name="spicy">Spicy</string>
    <string name="very_spicy">Very Spicy</string>
    <string name="food_weight">Food weight</string>
    <string name="any">Any</string>
    <string name="number_of_pieces">Number of pieces</string>
    <string name="for_how_many_people">For how many people</string>
    <string name="delivery">Delivery</string>
    <string name="contains_milk">Contains Milk</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="vegan">Vegan</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="sugar_free">Sugar Free</string>
    <string name="main_course">Main Course</string>
    <string name="suitable_for_dessert">Suitable For Dessert</string>
    <string name="kosher">Kosher</string>
    <string name="glat_kosher">Glat Kosher</string>
    <string name="write_a_headline">Write a Headline</string>
    <string name="write_a_description">Write a description</string>
    <string name="phone_for_dish_orders">Phone for dish orders</string>
    <string name="tell_to_everyone">Tell to everyone</string>
    <string name="publish">Publish</string>
    <string name="next">Next</string>
    <string name="what_is_cuisine_type">What is Cuisine Type</string>
    <string name="select_category">Select Category</string>
    <string name="cuisine_type">Cuisine Type</string>
    <string name="error">error</string>
    <string name="login">Login</string>
    <string name="distance">Distance</string>
    <string name="_0" translatable="false">0</string>
    <string name="_20_km">20 km+</string>
    <string name="_20_mile">20 miles+</string>
    <string name="choose_cuisine">Choose Cuisine</string>
    <string name="choose_category">Choose Category</string>
    <string name="search">Search</string>
    <string name="retake">Retake</string>
    <string name="contact_me">Contact Me</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="call_me">Call Me</string>
    <string name="order_now">Order Now</string>
    <string name="about_the_dish_title">About The Dish</string>
    <string name="more_information">More Information</string>
    <string name="number_of_people">Number of people</string>
    <string name="weight">Weight</string>
    <string name="discover">Discover</string>
    <string name="my_favourite_cooking">My Favourite Cooking</string>
    <string name="my_dishes">My Dishes</string>
    <string name="select_cuisine">Select Cuisine</string>
    <string name="select_cuisine_text">"Cuisine: "</string>
    <string name="select_categories_text">"Categories: "</string>
    <string name="edit_dish">Edit Dish</string>
    <string name="dishes">Dishes</string>
    <string name="delete">Delete</string>
    <string name="jump">Jump</string>
    <string name="edit">Edit</string>
    <string name="warning">Warning</string>
    <string name="dish_promote_text">"Your dish already has been promoted, you can promote a dish only once in 24 hours. Time left for promotion: "</string>
    <string name="hours">" hours"</string>
    <string name="ok">OK</string>
    <string name="dish_successfully_promoted">Dish successfully promoted</string>
    <string name="details_like">" Like"</string>
    <string name="details_likes">" Likes"</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="kg">" kg"</string>
    <string name="search_km_text">" km"</string>
    <string name="search_miles_text">" miles"</string>
    <string name="meters">" meters"</string>
    <string name="reset">Reset</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="add">Add</string>
    <string name="copylink">Copy Link</string>
    <string name="link_copied">Link Copied</string>
    <string name="navigation">Navigation</string>
    <string name="all_fields_required">All fields are required</string>
    <string name="settings">Settings</string>
    <string name="restart">Restart application to apply settings</string>
    <string name="pref_currency">Currency</string>
    <string name="pref_weight">Weight</string>
    <string name="pref_distance">Distance</string>
    <string name="pref_lang">Language</string>
    <string name="pref_push">Push Notification</string>
    <string name="pref_logout">Logout</string>
    <string name="pref_terms">Terms of use</string>
    <string name="about_dish">About The Dish?</string>
    <string name="lb">lb</string>
    <string name="count_dishes">%1$d dishes</string>

    <string name="gps_network_not_enabled">Location setting is not enable. Please turn On Location Services</string>
    <string name="gps_network_not_enabled_title">Location Services disabled</string>
    <string name="open_location_settings">Open location setting</string>
    <string name="locations_not_defined">Location not defined</string>
    <string name="title_activity_my_profile">My Profile</string>
    <string name="action_settings">Settings</string>
    <string name="about">About</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="title_activity_edit_profile">Edit Profile</string>
    <string name="editAboutMe">Edit about me</string>
    <string name="personal_details">Personal Details</string>
    <string name="network_error">Network error</string>
</resources>
